--- a/package.json
+++ b/package.json
@@ -2,20 +2,36 @@
   "name": "react-toy-cra",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-scripts": "4.0.0",
-    "web-vitals": "^0.2.4"
-  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+  },
+  "dependencies": {
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "connected-react-router": "^6.8.0",
+    "history": "^5.0.0",
+    "immutable": "^4.0.0-rc.12",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
+    "react-router-dom": "^5.2.0",
+    "react-router-prop-types": "^1.0.5",
+    "react-scripts": "4.0.0",
+    "redux": "^4.0.5",
+    "redux-immutablejs": "^0.0.8",
+    "redux-thunk": "^2.3.0",
+    "web-vitals": "^0.2.4"
+  },
+  "devDependencies": {
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
+    "prettier": "^2.1.2",
+    "react-hot-loader": "^4.13.0",
+    "react-refresh": "^0.9.0",
+    "redux-devtools-extension": "^2.13.8"
   },
   "eslintConfig": {
     "extends": [
