--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel-plugin-named-asset-import": "^0.3.7",
     "babel-preset-react-app": "^10.0.0",
     "bfj": "^7.0.2",
+    "bootstrap": "^4.5.3",
     "camelcase": "^6.1.0",
     "case-sensitive-paths-webpack-plugin": "2.3.0",
     "connected-react-router": "^6.8.0",
@@ -60,6 +61,7 @@
     "postcss-safe-parser": "5.0.2",
     "react": "^17.0.1",
     "react-app-polyfill": "^2.0.0",
+    "react-bootstrap": "^1.4.0",
     "react-dev-utils": "^11.0.0",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
