--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "node scripts/start.js",
-    "build": "node scripts/build.js",
-    "test": "node scripts/test.js"
+    "start": "cross-env NODE_PATH=src node scripts/start.js",
+    "build": "cross-env NODE_PATH=src node scripts/build.js",
+    "test": "cross-env NODE_PATH=src node scripts/test.js"
   },
   "dependencies": {
     "@babel/core": "7.12.3",
@@ -88,11 +88,12 @@
     "workbox-webpack-plugin": "5.1.4"
   },
   "devDependencies": {
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.4.2",
     "babel-plugin-extensible-destructuring": "^4.3.1",
+    "cross-env": "^7.0.3",
     "prettier": "^2.1.2",
     "react-hot-loader": "^4.13.0",
-    "react-refresh": "^0.9.0",
+    "react-refresh": "^0.8.3",
     "redux-devtools-extension": "^2.13.8"
   },
   "eslintConfig": {
